--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monster-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Dips-agrwl.github.io/monsters-rolodex",
+  "homepage": "https://dips-agrwl.github.io/monsters-rolodex/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
